tests/testfiles/passing/invalid_identifiers/keyword_as_id_union.c
/* Keyword as identifier: union */
int main() {
    int union;
}